Allow user to switch back to default theme from Tron theme. Also temporarily removes styling from Tron themed found words box to test alignment issue cause on mobile.

--- a/src/App.css
+++ b/src/App.css
@@ -729,19 +729,19 @@ html.dark-mode .hive-action {
   color: white;
 }
 
-html.dark-mode #found-words-section #found-words-list-box {
-  box-shadow: 0px 0px 5px #1eff2a;
-  border: 1px solid #75b371;
-}
+/*html.dark-mode #found-words-section #found-words-list-box {*/
+/*  box-shadow: 0px 0px 5px #1eff2a;*/
+/*  border: 1px solid #75b371;*/
+/*}*/
 
-html.dark-mode #found-words-section #found-words-list-box .found-words-list-item {
-  color: #00ffff;
-  text-shadow: 0 0 15px #007086;
-}
+/*html.dark-mode #found-words-section #found-words-list-box .found-words-list-item {*/
+/*  color: #00ffff;*/
+/*  text-shadow: 0 0 15px #007086;*/
+/*}*/
 
-html.dark-mode #found-words-section #found-words-list-box .found-words-list-item.grey-out {
-  color: #2b92c1;
-}
+/*html.dark-mode #found-words-section #found-words-list-box .found-words-list-item.grey-out {*/
+/*  color: #2b92c1;*/
+/*}*/
 
 html.dark-mode .points-update {
   background: none;
